Error setting option flags2 to value fastpskip #40272

Closed
opened 2014-05-20 03:47:00 +02:00 by Predrag Lazic · 8 comments

System Information
macintosh 10.7.5 / AMD Radeon HD 6750M

Blender Version
2.70.5 9127b8f

Short description of error
Hit render animation with this setup, error occur

Exact steps for others to reproduce the error

**System Information** macintosh 10.7.5 / AMD Radeon HD 6750M **Blender Version** 2.70.5 9127b8f **Short description of error** Hit render animation with this setup, error occur **Exact steps for others to reproduce the error** - attached file open [error_anim.blend](https://archive.blender.org/developer/F89479/error_anim.blend) - render animation
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @particl3s

Added subscriber: @particl3s

Added subscriber: @willi-2

Added subscriber: @willi-2

Addition: happens with H.264 output format, not with e.g. AVI JPEG
Also reported here: http://blenderartists.org/forum/showthread.php?336988-Error-Error-setting-option-flags2-to-value-fastpskip-(-wut-)
(confirmed on Win7/64, Blender build 85398de)

Addition: happens with H.264 output format, not with e.g. AVI JPEG Also reported here: http://blenderartists.org/forum/showthread.php?336988-Error-Error-setting-option-flags2-to-value-fastpskip-(-wut-) (confirmed on Win7/64, Blender build 85398de)
Sergey Sharybin self-assigned this 2014-05-20 14:07:28 +02:00

This might happen when you're opening some old files in new blender.Currently blender doesn't have good way to update ffmpeg flags in old files..

So please try setting another codec in the settings and go back to x264. This should re-detect settings which are available and use proper ones.

Meanwhile i'll check on what can be done from blender side to make it more automatic.

This might happen when you're opening some old files in new blender.Currently blender doesn't have good way to update ffmpeg flags in old files.. So please try setting another codec in the settings and go back to x264. This should re-detect settings which are available and use proper ones. Meanwhile i'll check on what can be done from blender side to make it more automatic.

This issue was referenced by 9dbd577184

This issue was referenced by 9dbd5771841c2d19aae494c9895879514e1a2f95

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9dbd577184.

Closed by commit 9dbd577184.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40272
No description provided.