Fix T40272: Error setting option flags2 to value fastpskip